// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should render with active link 1`] = `
<body>
  <div>
    <span
      class="bg-sky-500 flex items-center gap-3 py-1.5 px-3 font-medium dark:text-white"
    >
      <div>
        icon
      </div>
      Label
    </span>
  </div>
</body>
`;

exports[`NavLink should render with inactive link 1`] = `
<body>
  <div>
    <span
      class="dark:text-gray-300 dark:hover:text-gray-200 flex items-center gap-3 py-1.5 px-3 font-medium dark:text-white"
    >
      <div>
        icon
      </div>
      Label
    </span>
  </div>
</body>
`;
